[package]
edition = "2021"
name = "armor"
version = "0.1.0"

[dependencies]
image = "0.24"
sequoia-openpgp = "1.13"
# sequoia-openpgp = {version = "1.13", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto", "compression-deflate"]}
chrono = "0.4"
dev_util = "0.1"
hex = "0.4"
log = "0.4"
rand = "0.8"
sha2 = "0.10"
uuid = {version = "1.3", features = ["v4"]}
